# water-california

./: Cargo.toml
california-reservoir/: Cargo.toml
california-reservoir/src/: lib.rs
california-reservoir/src/observation/: interpolation.rs  mod.rs  observation.rs  raw_observation.rs  timed_observation.rs  tryfrom.rs
ecco/: Cargo.toml  README.md
fixtures/: capacity.csv  output.tar.lzma
water-california-wasm-lib/: Cargo.toml  LICENSE_MIT
water-california-wasm-lib/src/: lib.rs
